--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,44 @@ article:nth-of-type(2) {
     height: 50%;
 }
 
+#form {
+    margin-top: 2%;
+    background-color: #f2f2f2;
+    padding: 2%;
+}
+
+#form h2 {
+    text-align-last: center;
+}
+
+/* Style rules for form element */
+fieldset, input, select, textarea {
+    margin-bottom: 2%;
+}
+
+fieldset legend {
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
+label {
+    display: block;
+    padding-top: 3%;
+}
+
+form #submit {
+    margin: 0 auto;
+    border: none;
+    display: block;
+    padding: 2%;
+    background-color: #b3b3b3;
+    font-size: 1em;
+    border-radius: 10px;
+}
+    
+
+
+
 /* Style rules for footer content */
 footer p {
     font-size: 0.75em;
@@ -285,6 +323,41 @@ footer p a {
         height: 450px;
     }
     
+    /* Tablet Viewport: Style rules for table */
+    table {
+        border: 1px solid #000;
+        border-collapse:collapse;
+        margin: 0 auto;
+        width: 100%;
+    }
+    
+    caption {
+        font-size: 1.5em;
+        font-weight:bold;
+        padding: 1%;
+    }
+    
+    th, td {
+        border: 1px solid #000;
+        padding: 2%;
+    }
+    
+    th {
+       background-color: #000;
+        color:#fff;
+        font-size: 1.15em;
+    }
+    
+    tr:nth-child(odd)  {
+        background-color: #ccc;
+    }
+    
+    /* Tablet Viewport: Style rule for form elements*/
+    form {
+        width: 70%;
+        margin: 0 auto;
+    }
+    
 }
 
 /* Media Query for Desktop Viewport */
@@ -354,6 +427,21 @@ footer p a {
         margin: 0 2%;
     }
 
+    
+    /*Desktop Viewport: Style rules for form elements*/
+    form {
+        width: auto;
+    }
+    
+    .form-grid {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 20px;
+        }
+    
+    .btn {
+        grid-column: 1/ span 3;
+    }
     #exercises {
         clear: left;
     }
@@ -367,7 +455,10 @@ footer p a {
         width: 1920px;
         margin: 0 auto;
     }
-    
+   
+    table {
+        width: 80%;
+    }
 }
 
 /* Media Query for Print */
